feat: create find

--- a/src/index.html
+++ b/src/index.html
@@ -35,12 +35,36 @@
         </div> 
       </div> 
     </header>
-    <section>
-      <h2 class="find_h2">Find the remote one the <br> job of your dreams</h2>
-      <p class="find_paragraph">Create a resume or send a response to <br> a vacancy in the company with a world <br> name and work on a free schedule</p>
-      <img class="find_img" src="./img/hero-image.png" alt="hero-image">
-      
-    </section>
+    <div>
+     
+  <section class="find">
+    <div class="container">  
+      <div class="find_content">
+      <h1 class="find_title descr">Find the remote one the <br> job of your dreams</h1>
+      <p class="find_descriptation descr">Create a resume or send a response to <br> a vacancy in the company with a world <br> name and work on a free schedule</p>
+      <form class="find_form form" action="action">
+        <input type="text" placeholder="Start the search"> 
+        <button>
+          <img src="./svg/search.svg" alt="search">
+          <span>
+            Search for vacancies
+          </span>              
+        </button>
+      </form>
+      <div class="find_example">
+        <h4 class="find_for_example_title">For example:</h4>
+        <ul class="find_example_list">
+          <li class="find_example_item">Front-end</li>
+          <li class="find_example_item">Back-end</li>
+          <li class="find_example_item">Designer</li>
+        </ul>
+      </div>
+      <div class="find_img">
+        <img src="./img/hero-image.png" alt="hero-image">
+      </div>
+    </div>
+</section>
+    </div>
     <div>
       <h2 class="categories_h2">Categories</h2>
       <ul class="categories_list">
